Fix recent blocks popup flickering on open

--- a/idea/new-frontend/src/features/recentBlocks/ui/RecentBlocks.module.scss
+++ b/idea/new-frontend/src/features/recentBlocks/ui/RecentBlocks.module.scss
@@ -7,11 +7,10 @@
 
 %enterStyles {
   position: absolute;
-  align-items: center;
-  top: toRem(-32);
-  left: toRem(-99);
+  top: toRem(-30);
+  left: toRem(-96);
   width: toRem(432);
-  padding: toRem(14) toRem(12) toRem(24) toRem(24);
+  padding: toRem(12) toRem(12) toRem(24) toRem(24);
   z-index: 10;
   background: linear-gradient(180deg, #29292b 65.67%, shared.$bgColorSecondary 100%);
   border-radius: 24px;
@@ -23,8 +22,8 @@
   .value,
   .point,
   .graph > hr,
-  .blocksBtn svg path {
-    @include transition();
+  .arrow path {
+    @include transition;
   }
 }
 
@@ -45,7 +44,7 @@
     }
   }
 
-  .blocksBtn svg path {
+  .arrow path {
     fill: ui.$successColor;
   }
 }
@@ -70,7 +69,7 @@
     }
   }
 
-  .blocksBtn svg path {
+  .arrow path {
     fill: shared.$indigo;
   }
 }
@@ -81,13 +80,16 @@
 
 .recentBlocks {
   @include expand(toRem(36), 522px);
+  $border: ui.$borderModalWidth solid;
 
   display: flex;
   height: toRem(36);
   flex-direction: column;
+  align-items: center;
+  border: $border transparent;
 
   &.open {
-    border: ui.$borderModal;
+    border: $border ui.$borderModalColor;
   }
 
   &:global(.enter) {
@@ -135,7 +137,13 @@
 }
 
 .content {
+  @include transition;
   display: flex;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.65;
+  }
 
   .title {
     color: shared.$indigo800;
@@ -161,22 +169,18 @@
   }
 }
 
-.blocksBtn {
+.arrow {
+  margin-top: 10px;
+  margin-left: -5px;
   align-self: center;
-  margin-left: shared.$marginTiny;
+  transform: rotate(90deg);
 
-  svg {
-    transform: rotate(90deg);
-
-    path {
-      fill: shared.$indigo;
-    }
+  path {
+    fill: shared.$indigo;
   }
 
   &.rotated {
-    svg {
-      transform: rotate(-90deg);
-    }
+    transform: rotate(-90deg);
   }
 }
 
